<resources>
   <string name="app_name">FM Radio</string>
   <string name="fm_radio">FM Radio</string>
   <string name="ok">OK</string>
   <string name="output_modes">Output Modes</string>
   <string name="turn_on_fm">FM Power</string>
   <string name="disabled">Disabled</string>
   <string name="enabled">Enabled</string>
   <string name="phone_speaker">Speaker</string>
   <string name="wired_earphones">Wired Earphones</string>
   <string name="select_channel">Radio Channel</string>
   <string name="refresh">Refresh</string>
   <string name="seek_down">Seek Down</string>
   <string name="seek_up">Seek Up</string>
   <string name="scan">Scan</string>
   <string name="stop">Stop</string>
   <string name="mhz">Mhz</string>
   <string name="quit">Quit</string>
   <string name="album_art">Album Art</string>
   <string name="previous_radio_channel">Previous Radio Channel</string>
   <string name="next_radio_channel">Next Radio Channel</string>
   <string name="play_pause">Play Pause</string>
   <string name="close_radio">Close Radio</string>
   <string name="radio_io_error">Failed to open radio chr device!!</string>
   <string name="radio_io_error_desc">The FM radio app needs to call ioctl()
        to radio chr device (/dev/radio0). If SELinux is enforcing, try making
        it permissive</string>
   <string name="tracks_empty_error">Failed to check if array != null!!</string>
   <string name="tracks_empty_error_desc">Most likely because FM device couldn\'t
    find radio channels, if you are sure it should find channels, contact the devs</string>
   <string name="no_headphones_error">Failed to find wired headset</string>
   <string name="no_headphones_error_desc">Insert Headphones and try again</string>
   <string name="radio_controls">Radio Controls</string>
   <string name="fm_radio_frequency">FM Radio Station</string>
   <string name="fm">FM</string>
   <string name="inital_freq">000.0</string>
   <string name="channel_list">Channel List</string>
   <string name="favorites">Favorites</string>
   <string name="warning">Warning!</string>
   <string name="retry">Retry</string>
   <string name="exit_app">Exit App</string>
   <string name="fm_radio_freq">FM %s Mhz</string>
   <string name="update_freq">Updating channel freqs list</string>
</resources>
