<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="64dp"
    android:gravity="center_vertical"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/txt_title"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="5dp"
        android:layout_weight="1"
        android:gravity="center"
        android:background="@android:color/white"
        android:textColor="@android:color/black"
        android:textSize="20sp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/white">

        <ImageButton
            android:id="@+id/btn_rewind"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:background="@null"
            android:contentDescription="@string/previous_radio_channel"
            android:src="@drawable/left"/>

        <ImageButton
            android:id="@+id/btn_play_pause"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:background="@null"
            android:contentDescription="@string/play_pause"
            android:src="@drawable/stop" />

        <ImageButton
            android:id="@+id/btn_forward"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:background="@null"
            android:contentDescription="@string/next_radio_channel"
            android:src="@drawable/right"/>

    </LinearLayout>

    <ImageButton
        android:id="@+id/btn_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:contentDescription="@string/close_radio"
        android:minWidth="32dp"
        android:minHeight="48dp"
        android:src="@drawable/power" />
</LinearLayout>
