<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="top|center"
    android:fitsSystemWindows="true"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/debug_info"
        android:layout_width="190dp"
        android:layout_height="30dp"
        android:gravity="center" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp" />

    <de.dlyt.yanndroid.oneui.layout.RoundLinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/primary_color"
        android:gravity="center">

        <Space
            android:layout_width="10dp"
            android:layout_height="match_parent"/>

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/radio"/>
        <TextView
            android:id="@+id/fm_radio_title"
            android:layout_width="240dp"
            android:layout_height="120dp"

            android:gravity="center"
            android:text="@string/fm_radio"
            android:textColor="#263238"
            android:textSize="48sp"
            android:textStyle="bold" />

        <Space
            android:layout_width="10dp"
            android:layout_height="match_parent" />

    </de.dlyt.yanndroid.oneui.layout.RoundLinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="15dp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <de.dlyt.yanndroid.oneui.layout.RoundLinearLayout
            android:layout_width="wrap_content"
            android:layout_height="140dp"
            android:orientation="vertical"
            android:background="@color/primary_color"
            android:gravity="center|top">

            <TextView
                android:id="@+id/output_modes"
                android:layout_width="185dp"
                android:layout_height="70dp"
                android:gravity="center"
                android:text="@string/output_modes"
                android:textColor="#263238"
                android:textSize="25sp"
                android:textStyle="bold" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp"/>

            <Button
                android:id="@+id/fm_output"
                android:layout_width="175dp"
                android:layout_height="50dp"
                android:text="@string/wired_earphones"
                android:textColor="#263238"
                android:theme="@style/ButtonStyle.Colored"
                android:textSize="18sp" />

        </de.dlyt.yanndroid.oneui.layout.RoundLinearLayout>

        <Space
            android:layout_width="10dp"
            android:layout_height="match_parent"/>

        <de.dlyt.yanndroid.oneui.layout.RoundLinearLayout
            android:layout_width="wrap_content"
            android:layout_height="140dp"
            android:orientation="vertical"
            android:background="@color/primary_color"
            android:gravity="center|top">

            <TextView
                android:id="@+id/enable_fm"
                android:layout_width="185dp"
                android:layout_height="70dp"
                android:gravity="center"
                android:text="@string/turn_on_fm"
                android:textColor="#263238"
                android:textSize="25sp"
                android:textStyle="bold" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp"/>

            <Button
                android:id="@+id/fmswitch"
                android:layout_width="175dp"
                android:layout_height="50dp"
                android:text="@string/disabled"
                android:textColor="#263238"
                android:textSize="18sp"
                android:theme="@style/ButtonStyle.Colored" />

        </de.dlyt.yanndroid.oneui.layout.RoundLinearLayout>

    </LinearLayout>
    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <de.dlyt.yanndroid.oneui.layout.RoundLinearLayout
        android:layout_width="wrap_content"
        android:layout_height="230dp"
        android:background="@color/primary_color"
        android:orientation="vertical"
        android:gravity="center|top">

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp"/>

        <TextView
            android:id="@+id/freq_title"
            android:layout_width="375dp"
            android:layout_height="50dp"
            android:text="@string/fm_radio_frequency"
            android:textColor="#263238"
            android:textSize="35sp"
            android:textStyle="bold"
            android:gravity="center"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp"/>

        <TextView
            android:id="@+id/band_select"
            android:layout_width="375dp"
            android:layout_height="50dp"
            android:text="@string/select_channel"
            android:textColor="#263238"
            android:textSize="25sp"
            android:gravity="center"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp"/>

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/secondary_color">

            <SeekBar
                android:id="@+id/fm_freq_seekbar"
                android:layout_width="325dp"
                android:layout_height="50dp"
                android:progressBackgroundTint="@color/white"
                android:thumbTint="#263238"
                android:progressTint="#263238"/>
        </FrameLayout>

    </de.dlyt.yanndroid.oneui.layout.RoundLinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <de.dlyt.yanndroid.oneui.layout.RoundLinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|center"
        android:orientation="vertical"
        android:background="@color/primary_color">

        <Space
            android:layout_width="match_parent"
            android:layout_height="15dp" />

        <TextView
            android:id="@+id/radio_ctrl"
            android:layout_width="375dp"
            android:layout_height="50dp"
            android:text="@string/radio_controls"
            android:textColor="#263238"
            android:textSize="35sp"
            android:textStyle="bold"
            android:gravity="center"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="15dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <Space
                android:layout_width="15dp"
                android:layout_height="match_parent" />

            <Button
                android:id="@+id/scan_through"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:text="@string/scan"
                android:textColor="#263238"
                android:theme="@style/ButtonStyle.Colored"/>

            <Space
                android:layout_width="15dp"
                android:layout_height="match_parent" />

            <Button
                android:id="@+id/stop_scan"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:text="@string/stop"
                android:textColor="#263238"
                android:theme="@style/ButtonStyle.Colored" />

            <Space
                android:layout_width="15dp"
                android:layout_height="match_parent" />

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="15dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|center">

            <Space
                android:layout_width="15dp"
                android:layout_height="match_parent" />

            <Button
                android:id="@+id/seek_down"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:text="@string/seek_down"
                android:textColor="#263238"
                android:theme="@style/ButtonStyle.Colored"/>

            <Space
                android:layout_width="15dp"
                android:layout_height="match_parent" />

            <Button
                android:id="@+id/quit_fm"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:text="@string/quit"
                android:textColor="#263238"
                android:theme="@style/ButtonStyle.Colored"/>

            <Space
                android:layout_width="15dp"
                android:layout_height="match_parent" />

            <Button
                android:id="@+id/seek_up"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:text="@string/seek_up"
                android:textColor="#263238"
                android:theme="@style/ButtonStyle.Colored" />

            <Space
                android:layout_width="15dp"
                android:layout_height="match_parent" />

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="15dp" />

    </de.dlyt.yanndroid.oneui.layout.RoundLinearLayout>

</LinearLayout>
