<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:orientation="vertical" android:layout_width="match_parent" android:layout_height="match_parent" android:gravity="center" android:fitsSystemWindows="true" android:id="@+id/main_fragment" android:background="@android:color/system_accent1_100">
   <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:paddingTop="65dp" android:paddingStart="30dp" android:paddingEnd="30dp" android:orientation="vertical" android:layout_gravity="top|center">
      <com.google.android.material.textview.MaterialTextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/app_banner" android:textColor="@android:color/system_accent1_500" android:textSize="65sp" android:textStyle="bold" android:text="@string/app_name"/>
      <Space android:layout_width="5dp" android:layout_height="match_parent"/>
      <FrameLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:gravity="end">
         <com.google.android.material.floatingactionbutton.FloatingActionButton android:layout_gravity="start|center_vertical" android:layout_marginStart="30dp" android:layout_width="wrap_content" android:layout_height="match_parent" android:id="@+id/fav_button" app:elevation="0dp" android:backgroundTint="@android:color/system_accent1_400" android:src="@drawable/ic_star"/>
         <LinearLayout android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_gravity="end">
            <com.google.android.material.textview.MaterialTextView android:layout_width="wrap_content" android:layout_height="match_parent" android:id="@+id/fm_freq" android:text="@string/inital_freq" android:textStyle="bold" android:textColor="@android:color/system_accent1_500" android:textSize="65sp"/>
            <com.google.android.material.textview.MaterialTextView android:layout_width="wrap_content" android:layout_height="match_parent" android:gravity="bottom" android:paddingBottom="20dp" android:id="@+id/freq_misc" android:textSize="25sp" android:textColor="@android:color/system_accent1_500" android:text="@string/mhz" android:textStyle="bold"/>
         </LinearLayout>
      </FrameLayout>
   </LinearLayout>
   <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_gravity="bottom|center_horizontal" android:gravity="center_horizontal" android:orientation="vertical" android:paddingBottom="100dp">
      <LinearLayout android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="30dp" android:layout_marginBottom="50dp" android:gravity="center">
         <com.google.android.material.floatingactionbutton.FloatingActionButton android:layout_width="wrap_content" android:layout_height="wrap_content" android:backgroundTint="@android:color/system_accent1_400" android:id="@+id/volume_down" app:elevation="0dp" android:src="@drawable/ic_volume_down"/>
         <androidx.appcompat.widget.AppCompatSeekBar android:layout_width="175dp" android:id="@+id/volume_seekbar" android:progressDrawable="@drawable/ic_seekbar" android:thumb="@drawable/ic_seekbar_thumb" android:layout_height="match_parent"/>
         <com.google.android.material.floatingactionbutton.FloatingActionButton android:layout_width="wrap_content" android:layout_height="wrap_content" android:backgroundTint="@android:color/system_accent1_400" android:id="@+id/volume_up" app:elevation="0dp" android:src="@drawable/ic_volume_up"/>
      </LinearLayout>
      <LinearLayout android:layout_width="wrap_content" android:layout_height="wrap_content" android:gravity="center">
         <com.google.android.material.floatingactionbutton.FloatingActionButton android:id="@+id/before_channel" android:layout_width="wrap_content" android:backgroundTint="@android:color/system_accent1_400" android:layout_height="wrap_content" app:elevation="0dp" android:src="@drawable/ic_rewind"/>
         <Space android:layout_width="50dp" android:layout_height="match_parent"/>
         <com.google.android.material.floatingactionbutton.FloatingActionButton android:id="@+id/fm_power" android:layout_width="wrap_content" android:backgroundTint="@android:color/system_accent1_400" android:layout_height="wrap_content" app:elevation="0dp" android:src="@drawable/ic_power"/>
         <Space android:layout_width="50dp" android:layout_height="match_parent"/>
         <com.google.android.material.floatingactionbutton.FloatingActionButton android:id="@+id/next_channel" android:layout_width="wrap_content" android:backgroundTint="@android:color/system_accent1_400" android:layout_height="wrap_content" app:elevation="0dp" android:src="@drawable/ic_forward"/>
      </LinearLayout>
      <Space android:layout_width="match_parent" android:layout_height="30dp"/>
      <com.google.android.material.floatingactionbutton.FloatingActionButton android:id="@+id/fm_output_btn" android:layout_width="wrap_content" android:backgroundTint="@android:color/system_accent1_400" android:layout_height="wrap_content" app:elevation="0dp" app:srcCompat="@drawable/ic_volume_up"/>
   </LinearLayout>
</FrameLayout>
